syntax = "proto3";

import "validate/validate.proto";

option go_package = "route256/loms/pkg/api/orders/v1;orders";

service OrderService {
    rpc OrderCreate(OrderCreateRequest) returns (OrderCreateResponse) {}

    rpc OrderInfo(OrderInfoRequest) returns (OrderInfoResponse) {}

    rpc OrderPay(OrderPayRequest) returns (OrderPayResponse) {}

    rpc OrderCancel(OrderCancelRequest) returns (OrderCancelResponse) {}
}

message OrderCreateRequest {
    int64 user_id = 1 [
    (validate.rules).int64 = {
        gt: 0
    }];

    repeated ItemInfo items = 2 [
    (validate.rules).repeated  = {
        min_items: 1
    }];
}

message ItemInfo {
    int64 sku_id = 1 [
    (validate.rules).int64 = {
        gt: 0
    }];

    uint32 count = 2 [
    (validate.rules).uint32 = {
        gt: 0
    }];
}

message OrderCreateResponse {
    int64 order_id = 1;
}

message OrderInfoRequest {
    int64 order_id = 1 [
    (validate.rules).int64 = {
        gt: 0
    }];
}

message OrderInfoResponse {
    int64 user_id = 1;
    string status = 2;
    repeated ItemInfo items = 3;
}

message OrderPayRequest {
    int64 order_id = 1 [
    (validate.rules).int64 = {
        gt: 0
    }];
}

message OrderPayResponse {
}

message OrderCancelRequest {
    int64 order_id = 1 [
    (validate.rules).int64 = {
        gt: 0
    }];
}

message OrderCancelResponse {
}
